# diary-back

./: README.md  config.py  data.db  deploy.py  main.py  pyproject.toml  vercel.json
src/api/: app.py
src/api/dependencies/: sqlalchemy.py
src/api/router/: auth.py  root.py
src/common/dto/: base.py
src/common/dto/queries/: auth.py  user.py
src/common/dto/responses/: auth.py  user.py
src/common/exceptions/: authorization.py  base.py  database.py  validation.py
src/common/interfaces/: repository.py  unit_of_work.py
src/common/utils/security/: verify.py
src/database/orm/models/: __init__.py  remembrance.py  user.py
src/handlers/: base.py
src/handlers/auth/: auth.py  user.py
src/repositories/: auth.py  base.py  user.py
src/services/: auth.py  base.py  gateway.py  user.py
