[tool.poetry]
name = "diary-back"
version = "0.1.0"
description = "Backend for diary app"
authors = ["Pavlo Lopatiuk <pashalopatuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
