[tool.poetry]
name = "diary-back"
version = "0.1.0"
description = "Backend for diary app"
authors = ["Pavlo Lopatiuk <pashalopatuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
aiosqlite = "^0.20.0"
greenlet = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
